<resources>
    <string name="app_name">Arcadia High Mobile</string>
    <string name="app_version">5.0</string>


    <!-- database stuff -->
    <string name="db_app_id">1:654225823864:android:79667fc6142c94cbb7758d</string>
    <string name="db_url">https://ahs-app.firebaseio.com/</string>
    <string name="db_api_key">AIzaSyBRBGC45zgZd6JtLKDq2nfwDnW5symCwX8</string>
    <string name="db_name">ahs-app</string>

    <!-- db stuff (articles) -->
    <string name="db_articles">articles</string>
    <string name="db_articles_author">author</string>
    <string name="db_articles_body">body</string>
    <string name="db_articles_categoryID">categoryID</string>
    <string name="db_articles_date">date</string>
    <string name="db_articles_featured">featured</string>
    <string name="db_articles_imageURLs">imageURLs</string>
    <string name="db_articles_videoURLs">videoIDs</string>
    <string name="db_articles_notified">notified</string>
    <string name="db_articles_thumbURLs">thumbURLs</string>
    <string name="db_articles_timestamp">timestamp</string>
    <string name="db_articles_title">title</string>
    <string name="db_articles_views">views</string>


    <!-- db stuff (weeks) -->
    <string name="db_weeks_id">weeks</string>
    <string name="db_weeks_title">title</string>
    <string name="db_weeks_schedule_ids">scheduleIDs</string>

    <!-- db stuff (schedule) -->
    <string name="db_schedule_id">schedules</string>
    <string name="db_schedule_icon">iconURL</string>
    <string name="db_schedule_color">color</string>
    <string name="db_schedule_title">title</string>
    <string name="db_schedule_dots">dots</string>
    <string name="db_schedule_timestamps">timestamps</string>
    <string name="db_schedule_period_id">periodIDs</string>


    <!-- navbar titles -->
    <string name="homeNavbarTitle">Home</string>
    <string name="mapNavbarTitle">Map</string>
    <string name="scheduleNavbarTitle">Schedule</string>
    <string name="profileNavbarTitle">Profile</string>

    <!-- home page -->
    <string name="featured_boards_title_text_bold">Featured</string>
    <string name="featured_boards_title_text_light">Boards</string>
    <string name="home_title">Arcadia</string>
    <string name="home_default_month">January</string>

    <!-- article board -->
    <string name="article_boards_title_text_default">Opportunities</string>

    <!-- profile -->
    <string name="profileNavbarTitleBold">Your</string>
    <string name="profileNavbarTitleLight">Profile</string>
    <string name="profile_card_default_given_name">Digital ID card</string>
    <string name="profile_card_default_family_name">Tap to sign in</string>
    <string name="profile_card_barcode_description">Student ID barcode</string>
    <string name="profile_card_pic_description">Profile picture</string>
    <string name="profile_card_default_photo_url">https://ahs.app/icon.png</string>
    <string name="profile_card_default_user_id">12345</string>
    <string name="profile_settings_title">Settings</string>
    <string name="profile_settings_dark_mode_title">Dark Mode</string>
    <string name="profile_settings_dark_mode_detail">Disabled</string>
    <string name="profile_settings_notifications_title">Notifications</string>
    <string name="profile_settings_about_us_title">About Us</string>
    <string name="profile_settings_terms_title"><![CDATA[Terms & Agreements]]></string>
    <string name="profile_settings_app_version_title">App Version</string>
    <string name="profile_settings_sign_in_title">Sign in</string>

    <!-- schedule -->
    <string name="scheduleNavbarTitleBold">Your</string>
    <string name="scheduleNavbarTitleLight">Schedule</string>

    <!-- notif -->
    <string name="default_notification_channel_id">Arcadia High Mobile Notifications</string>
    <string name="notification_rationale_text">Allow notifications?</string>
    <string name="notification_rationale_text_title">Notifications</string>

    <!-- misc -->
    <string name="dev_status">i\'ve watched those eyes light up with a smile</string>
    <string name="super_secret_nfc_salt">(this is the salt) mmm hash browns</string>


</resources>