<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- title bar -->

        <LinearLayout
            android:id="@+id/home_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontalMainPadding"
                android:layout_marginVertical="@dimen/verticalMainPadding"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="1"
                    android:contentDescription="@string/app_name"

                    android:scaleType="fitStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/applogoclear_fullres" />

                <TextView
                    android:id="@+id/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfprodisplay_bold"
                    android:includeFontPadding="false"
                    android:text="@string/home_title"
                    style="@style/appDevTitleStyleBold"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="43dp"
                    tools:layout_conversion_absoluteWidth="130dp" />


                <TextView
                    android:id="@+id/home_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mediumbold_lightregular"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:text="@string/home_default_month"
                    android:textColor="@color/brickRed"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/home_title"
                    tools:layout_conversion_absoluteHeight="34dp"
                    tools:layout_conversion_absoluteWidth="86dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/board_section_title_bold"
                    style="@style/appDevTitleStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/horizontalMainPadding"
                    android:text="@string/featured_boards_title_text_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/board_section_title_light"
                    style="@style/appDevTitleStyleLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/adjacentTextSpacing"
                    android:text="@string/featured_boards_title_text_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/boardsRecyclerView"
                class="androidx.appcompat.app.AlertController$RecycleListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="0dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>